HelloUltraviolet/Fixtures/RejectedSource/DataTypes/NoIntegerNumericSubtyping/Expected.uv
//! Expected diagnostic metadata for the NoIntegerNumericSubtyping rejected-source specimen.

expectedDiagnostic("E-MOD-2402", "req.NoIntegerNumericSubtyping")
